--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="about.html">Acerca de</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="signin.html">Iniciar sesión</a></li>
+          <!--<li><a href="signin.html">Iniciar sesión</a></li>-->
           <li class="nav__perfil">
             <div class="avatar">
               <img src="images/avatar1.jpg" />
@@ -270,7 +270,7 @@
     <!-- ===== Inicio del footer ===== -->
     <footer>
       <div class="footer__redes">
-        <a href="https://github.com/davidparellada/BlogIt" target="_blank"
+        <a href="https://github.com/davidparellada/Bloguealo" target="_blank"
           ><i class="uil uil-github"></i
         ></a>
         <a href="https://www.youtube.com/" target="_blank"
